@@ -1,4 +1,4 @@
-$Id: TODO,v 1.12 2003-01-06 20:58:59 wilsonp Exp $
+$Id: TODO,v 1.13 2003-01-14 05:01:18 wilsonp Exp $
 
 When claiming a task from this list, please immediately place your
 name beside it, change the date from the date that it was added to
@@ -14,7 +14,6 @@ EK - Eric Kuo
 
 BUG FIXES
 ------------------
-**** (12/23/2002) Units in description of Contact Dose are wrong
 
 NEW FEATURES
 ------------------
