@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.11 2003-01-06 20:58:59 wilsonp Exp $
+$Id: ChangeLog,v 1.12 2003-01-14 05:01:18 wilsonp Exp $
 	
 Version 2.6.???
 	
@@ -10,6 +10,7 @@ BUGS FIXED
         * Command-line argument handling: when extra argument expected (-v, -t)
 	  for last option but not given, casuses SEGFAULT (core dump).  Check
 	  for last command-line option and error. [AV] (09/09/2002)
+	* Fixed units for contact dose [PW] (01/13/2003)
 	
 
 NEW FEATURES
